Fix form fields gap.

--- a/baseframe/static/sass/baseframe-bs3-custom.scss
+++ b/baseframe/static/sass/baseframe-bs3-custom.scss
@@ -73,6 +73,13 @@ textarea#description {
     min-height: 300px;
 }
 
+.control-group {
+    margin-bottom: 15px;
+    .help-block {
+        margin-bottom: 0;
+    }
+}
+
 /* bs3 buttons */
 
 button.btn, a.btn{
